overflow fix

--- a/neocities/css/bloomBase.css
+++ b/neocities/css/bloomBase.css
@@ -15,7 +15,8 @@ body {
 
     padding-top: 80px;
 
-    overflow: auto;
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .rainbowWrapper {
